# dmlkappa

./: README.md  pyproject.toml
examples/: basic_diagnostic_example.py
notebooks/: dmlkappa_quickstart.ipynb  replicate_plr_simulations.ipynb  replicate_plr_simulations.py
src/dmlkappa/: __init__.py  core.py  diagnostics.py  estimator.py  plotting.py  simulation.py
src/dmlkappa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py  test_diagnostics.py  test_estimator.py  test_simulation.py
