[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmlkappa"
version = "0.0.1"
description = "Diagnostics for DML condition number kappa_DML and PLR simulations"
authors = [ { name = "Gabriel Saco" } ]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scikit-learn>=1.0",
  "matplotlib>=3.3",
]

[project.optional-dependencies]
dev = ["pytest>=6.0","black"]
